# osmand

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  default.nix  docker.nix  osmand-mirror  osmand-mirror.cabal  osmand.cabal  release.nix  requirements.nix  requirements.txt  requirements_frozen.txt  setup.py  shell.nix  stack.yaml
scripts/: mirror-fr.sh
src/: Main.hs  OsmAnd.hs
