name:                osmand
version:             1.3.0
synopsis:            OsmAnd Mirror
description:         OsmAnd Mirror API
license:             BSD3
license-file:        LICENSE
author:              Alexandre Peyroux
maintainer:          alex@xn--wxa.email
homepage:            https://github.com/apeyroux/osmand
bug-reports:         https://github.com/apeyroux/osmand/issues
category:            geography, library
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
allow_newer:         true


source-repository head
  type:     git
  location: https://github.com/apeyroux/osmand
                     
library
  exposed-modules:     OsmAnd
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , text
                     , hxt
                     , hxt-http
                     , mtl
                     , data-default
                     
executable osmand
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , async
                     , osmand
                     , text
                     , hxt
                     , hxt-http
                     , mtl
                     , data-default
                     , optparse-applicative
                     , ascii-progress
                     , bytestring
                     , conduit
                     , http-conduit
                     , http-types
                     , gitrev
                     , resourcet
                     , directory
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
